--- a/paginas/index.html
+++ b/paginas/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>AluraGeek</title>
+<html lang="pt-br">
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<head>
+    <title>AluraGeek</title>
 
-        <!--Folha de estilos personalizada-->
-        <link href="..\assets\css\index.css" rel="stylesheet">
-    </head>
-    <body>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <div class="principal">Testando a página</div>
+    <!--Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    </body>
+    <!--Folha de estilos personalizada-->
+    <link href="..\assets\css\index.css" rel="stylesheet">
+</head>
+
+<body>
+
+    <header>
+        <div class="logo">
+            <img src="../assets/imgs/logo.png" alt="Logotipo AluraGeek" class="logotipo">
+            <h3 class="logo-texto">
+                <span>Alura</span>Geek
+            </h3>
+        </div>
+        <div class="input-wrapper">
+            <input type="text" placeholder="O que deseja encontrar?" class="input-busca">
+            <span class="search-icon"></span>
+        </div>
+        <div class="btn1" id="btn-login">Login</div>
+    </header>
+
+</body>
+
 </html>
