Adicionada o banner principal

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -32,6 +32,12 @@
         <div class="btn1" id="btn-login">Login</div>
     </header>
 
+    <div class="banner-hero">
+        <h1 class="hero-title">Dezembro Promocional</h1>
+        <h2 class="hero-subtitle">Produtos selecionados com 33% de desconto</h2>
+        <div class="btn2" id="btn-consoles">Ver consoles</div>
+    </div>
+
 </body>
 
 </html>
