Página inicial finalizada, faltando responsividade

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -7,10 +7,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
     <!--Folha de estilos personalizada-->
     <link href="..\assets\css\index.css" rel="stylesheet">
@@ -36,6 +43,178 @@
         <h1 class="hero-title">Dezembro Promocional</h1>
         <h2 class="hero-subtitle">Produtos selecionados com 33% de desconto</h2>
         <div class="btn2" id="btn-consoles">Ver consoles</div>
+    </div>
+
+    <main class="container-principal">
+
+        <section class="categoria-wrapper"> <!--Início seção Star Wars-->
+            <div class="categoria-header">
+                <h3>Star Wars</h3>
+                <a href="#">Ver tudo <i class="fa-sharp fa-solid fa-arrow-right"></i></i></a>
+            </div>
+            <div class="categoria-cards">
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/starwars1.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/starwars2.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/starwars3.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/starwars4.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/starwars5.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/starwars6.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="categoria-wrapper"> <!--Início seção Consoles-->
+            <div class="categoria-header">
+                <h3>Consoles</h3>
+                <a href="#">Ver tudo <i class="fa-sharp fa-solid fa-arrow-right"></i></i></a>
+            </div>
+            <div class="categoria-cards">
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/console1.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/console2.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/console3.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/console4.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/console5.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/console6.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="categoria-wrapper"> <!--Início seção Diversos-->
+            <div class="categoria-header">
+                <h3>Diversos</h3>
+                <a href="#">Ver tudo <i class="fa-sharp fa-solid fa-arrow-right"></i></i></a>
+            </div>
+            <div class="categoria-cards">
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/diversos1.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/diversos2.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/diversos3.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/diversos4.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/diversos5.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+                <div class="card-wrapper">
+                    <img src="../assets/imgs/diversos6.png" alt="Caneca de Storm Trooper" class="card-image">
+                    <h2>Produto XYZ</h2>
+                    <span>R$ 60,00</span>
+                    <a href="#">Ver produto</a>
+                </div>
+            </div>
+        </section>
+    </main>
+    
+    <footer class="rodape">
+        <div class="logo">
+            <img src="../assets/imgs/logo.png" alt="Logotipo AluraGeek" class="logotipo">
+            <h3 class="logo-texto">
+                <span>Alura</span>Geek
+            </h3>
+        </div>
+        <nav class="rodape-navegacao">
+            <ul>
+                <li><a href="#">Quem somos nós</a></li>
+                <li><a href="#">Política de privacidade</a></li>
+                <li><a href="#">Programa fidelidade</a></li>
+                <li><a href="#">Nossas lojas</a></li>
+                <li><a href="#">Quero ser franqueado</a></li>
+                <li><a href="#">Anuncie aqui</a></li>
+            </ul>
+        </nav>
+        <form class="rodape-contato">
+            <h3>Fale conosco</h3>
+            <div class="input-wrapper2">
+                <input type="text" id="nome">
+                <label for="nome">Nome</label>
+            </div>
+            <div class="input-wrapper3">
+                <input type="text" id="mensagem" placeholder="Escreva sua mensagem">
+            </div>
+            <button class="btn2">Enviar mensagem</button>
+        </form>
+    </footer>
+
+    <div class="creditos">
+        Desenvolvido por Guilherme Moura em 2023 <a href="https://github.com/gui-moura1473" title="Conheça meus outros trabalhos!"><i class="fa-brands fa-github fa-lg"></i></a>
     </div>
 
 </body>
