Adicionada a responsividade à página inicial

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -46,141 +46,7 @@
     </div>
 
     <main class="container-principal">
-
-        <section class="categoria-wrapper"> <!--Início seção Star Wars-->
-            <div class="categoria-header">
-                <h3>Star Wars</h3>
-                <a href="#">Ver tudo <i class="fa-sharp fa-solid fa-arrow-right"></i></i></a>
-            </div>
-            <div class="categoria-cards">
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/starwars1.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/starwars2.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/starwars3.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/starwars4.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/starwars5.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/starwars6.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="categoria-wrapper"> <!--Início seção Consoles-->
-            <div class="categoria-header">
-                <h3>Consoles</h3>
-                <a href="#">Ver tudo <i class="fa-sharp fa-solid fa-arrow-right"></i></i></a>
-            </div>
-            <div class="categoria-cards">
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/console1.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/console2.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/console3.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/console4.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/console5.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/console6.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="categoria-wrapper"> <!--Início seção Diversos-->
-            <div class="categoria-header">
-                <h3>Diversos</h3>
-                <a href="#">Ver tudo <i class="fa-sharp fa-solid fa-arrow-right"></i></i></a>
-            </div>
-            <div class="categoria-cards">
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/diversos1.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/diversos2.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/diversos3.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/diversos4.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/diversos5.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-                <div class="card-wrapper">
-                    <img src="../assets/imgs/diversos6.png" alt="Caneca de Storm Trooper" class="card-image">
-                    <h2>Produto XYZ</h2>
-                    <span>R$ 60,00</span>
-                    <a href="#">Ver produto</a>
-                </div>
-            </div>
-        </section>
+            
     </main>
     
     <footer class="rodape">
@@ -217,6 +83,7 @@
         Desenvolvido por Guilherme Moura em 2023 <a href="https://github.com/gui-moura1473" title="Conheça meus outros trabalhos!"><i class="fa-brands fa-github fa-lg"></i></a>
     </div>
 
+    <script src="../assets/js/main.js" type="module"></script>
 </body>
 
 </html>
